--- a/src/components/PostPreview/PostPreview.module.css
+++ b/src/components/PostPreview/PostPreview.module.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Manjari:wght@100;400;700&display=swap");
 
 .post_preview_container {
-	/* height: 500px; */
 	width: 80vw;
 	margin: 50px 0;
 	display: flex;
@@ -10,7 +9,6 @@
 }
 
 .post_preview_image {
-	/* height: 100%; */
 	width: 100%;
 }
 
@@ -18,4 +16,12 @@
 	margin: 50px 30px;
 	font-size: 42px;
 	font-family: Manjari, sans-serif;
+}
+
+@media screen and (max-width: 700px) {
+	.post_preview_container {
+		width: 100vw;
+		/* height: 80vh; */
+		flex-direction: column;
+	}
 }
